--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.0.0",
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
+    "keycloak-js": "^6.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
@@ -32,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/keycloak-js": "^3.4.1",
+    "@types/react-router-dom": "^4.3.2"
   }
 }
